Canvas fix + button spacing
- Fixed Canvas page (prev / next button in weird place on page)
- Added more space to buttons on bottom of pages

--- a/kyleportfoliothree/css/main.css
+++ b/kyleportfoliothree/css/main.css
@@ -703,6 +703,10 @@ nav ul li a {
     padding-left: 12px;
 }
 
+.space-between-buttons .button {
+    padding-bottom: 18px;
+}
+
 #button-extra-height {
     padding-bottom: 20px;
 }
